--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "sveltick",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "⚡️ Sveltick: A lightweight, cool performance tracking library for Svelte apps!",
-  "main": "dist/sveltick.cjs.js",
-  "module": "dist/sveltick.es.js",
-  "svelte": "src/Sveltick.svelte",
+  "main": "dist/sveltick.cjs.js", 
+  "module": "dist/sveltick.es.js", 
+  "exports": {
+    ".": {
+      "import": "./dist/sveltick.es.js",  
+      "require": "./dist/sveltick.cjs.js"  
+    }
+  },
+  "type": "module",  
   "scripts": {
     "build": "rollup -c"
   },
