--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "sveltick",
-  "version": "1.2.1",
+  "version": "1.3.0",
   "description": "⚡️ Sveltick: A lightweight, cool performance tracking library for Svelte apps!",
-  "main": "dist/sveltick.cjs.js", 
-  "module": "dist/sveltick.es.js", 
+  "main": "dist/sveltick.cjs.js",
+  "module": "dist/sveltick.es.js",
   "exports": {
     ".": {
-      "import": "./dist/sveltick.es.js",  
-      "require": "./dist/sveltick.cjs.js"  
+      "import": "./dist/sveltick.es.js",
+      "require": "./dist/sveltick.cjs.js"
     }
   },
-  "type": "module",  
+  "type": "module",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "format": "prettier --plugin-search-dir . --write .",
+    "release": "npm run build && git add . && git commit -m \"build: new release\" && npm version patch && git push origin main && git push origin --tags && gh release create $(git describe --tags) --generate-notes"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "prettier": "^3.3.3",
     "rollup": "^2.38.5",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
+    "standard-version": "^9.5.0",
     "svelte": "^3.38.2"
   },
   "license": "MIT",
