--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "scripts": {
     "build": "rollup -c",
     "format": "prettier --plugin-search-dir . --write .",
-    "release": "npm run format && npm run build && git add . && git commit -m \"build: new release\" && npm version patch && git push origin main && git push origin --tags && gh release create $(git describe --tags) --generate-notes"
+    "release-patch": "npm run format && npm run build && git add . && git commit -m \"build: new release\" && npm version patch && git push origin main && git push origin --tags && gh release create $(git describe --tags) --generate-notes",
+    "release-minor": "npm run format && npm run build && git add . && git commit -m \"build: new release\" && npm version minor && git push origin main && git push origin --tags && gh release create $(git describe --tags) --generate-notes",
+    "release-major": "npm run format && npm run build && git add . && git commit -m \"build: new release\" && npm version major && git push origin main && git push origin --tags && gh release create $(git describe --tags) --generate-notes"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^28.0.0",
