build: new release

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "type": "git",
     "url": "https://github.com/Adam014/sveltick.git"
   },
-  "author": "Your Name",
+  "author": "Adam014",
   "keywords": [
     "svelte",
     "performance",
