chore: adding scripts to turbo

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "dev": "turbo run dev"
+    "dev": "turbo run dev",
+    "lint": "turbo run lint",
+    "format": "turbo run format"
   },
   "devDependencies": {
     "turbo": "^2.2.3"
