--- a/packages/sveltick/package.json
+++ b/packages/sveltick/package.json
@@ -12,6 +12,7 @@
   },
   "type": "module",
   "scripts": {
+    "test": "jest",
     "build": "rollup -c",
     "format": "prettier --plugin-search-dir . --write .",
     "release-patch": "npm run format && npm run build && git add . && git commit -m \"build: new release\" && npm version patch && git push origin main && git push origin --tags && gh release create $(git describe --tags) --generate-notes",
@@ -19,8 +20,11 @@
     "release-major": "npm run format && npm run build && git add . && git commit -m \"build: new release\" && npm version major && git push origin main && git push origin --tags && gh release create $(git describe --tags) --generate-notes"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.9",
+    "@babel/preset-env": "^7.25.9",
     "@rollup/plugin-commonjs": "^28.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "babel-jest": "^29.7.0",
     "prettier": "^3.3.3",
     "rollup": "^2.38.5",
     "rollup-plugin-svelte": "^7.1.0",
